gen/tools/grammar/parser/GrammarFileParser.java
// Generated from /home/alexander/Projects/Java/parser-gen/src/main/resources/GrammarFile.g4 by ANTLR 4.9.1

package tools.grammar.parser;
import java.util.Optional;
import java.util.List;
import java.util.Map;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.HashMap;
import java.util.Collections;
import java.util.stream.Collectors;
import parser.generator.grammar.Grammar;
import parser.generator.grammar.element.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarFileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARROW=1, TERMINALS=2, NON_TERMINALS=3, RETURNS=4, START=5, RULES=6, MISS=7, 
		EPSILON=8, LTRIANGULAR_BRACKET=9, RTRIANGULAR_BRACKET=10, REGEXP=11, CODE=12, 
		GRAMMAR_NAME=13, COLON=14, EQ=15, SEMICOLON=16, COMMA=17, ID=18, WS=19, 
		ARGUMENTS=20;
	public static final int
		RULE_parseGrammarFile = 0, RULE_name = 1, RULE_miss = 2, RULE_missList = 3, 
		RULE_parseTerminals = 4, RULE_terminals = 5, RULE_terminal = 6, RULE_parseNonTerminals = 7, 
		RULE_nonTerminals = 8, RULE_nonTerminal = 9, RULE_attributes = 10, RULE_attributesList = 11, 
		RULE_attribute = 12, RULE_type = 13, RULE_generic = 14, RULE_csvType = 15, 
		RULE_parseStart = 16, RULE_parseRules = 17, RULE_rules = 18, RULE_oneRule = 19, 
		RULE_grammarElements = 20, RULE_grammarElement = 21, RULE_args = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"parseGrammarFile", "name", "miss", "missList", "parseTerminals", "terminals", 
			"terminal", "parseNonTerminals", "nonTerminals", "nonTerminal", "attributes", 
			"attributesList", "attribute", "type", "generic", "csvType", "parseStart", 
			"parseRules", "rules", "oneRule", "grammarElements", "grammarElement", 
			"args"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'->'", "'terminals'", "'non-terminals'", "'returns'", "'start'", 
			"'rules'", "'miss'", "'EPS'", "'<'", "'>'", null, null, null, "':'", 
			"'='", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ARROW", "TERMINALS", "NON_TERMINALS", "RETURNS", "START", "RULES", 
			"MISS", "EPSILON", "LTRIANGULAR_BRACKET", "RTRIANGULAR_BRACKET", "REGEXP", 
			"CODE", "GRAMMAR_NAME", "COLON", "EQ", "SEMICOLON", "COMMA", "ID", "WS", 
			"ARGUMENTS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarFile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	Map<String, Terminal> terminalsByName = new HashMap<>();
	Map<String, NonTerminalDeclaration> nonTerminalsByName = new HashMap<>();

	public GrammarFileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseGrammarFileContext extends ParserRuleContext {
		public Grammar grammar;
		public NameContext name;
		public MissContext miss;
		public ParseTerminalsContext parseTerminals;
		public ParseNonTerminalsContext parseNonTerminals;
		public ParseStartContext parseStart;
		public ParseRulesContext parseRules;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public MissContext miss() {
			return getRuleContext(MissContext.class,0);
		}
		public ParseTerminalsContext parseTerminals() {
			return getRuleContext(ParseTerminalsContext.class,0);
		}
		public ParseNonTerminalsContext parseNonTerminals() {
			return getRuleContext(ParseNonTerminalsContext.class,0);
		}
		public ParseStartContext parseStart() {
			return getRuleContext(ParseStartContext.class,0);
		}
		public ParseRulesContext parseRules() {
			return getRuleContext(ParseRulesContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GrammarFileParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarFileParser.WS, i);
		}
		public ParseGrammarFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseGrammarFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).enterParseGrammarFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).exitParseGrammarFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarFileVisitor ) return ((GrammarFileVisitor<? extends T>)visitor).visitParseGrammarFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseGrammarFileContext parseGrammarFile() throws RecognitionException {
		ParseGrammarFileContext _localctx = new ParseGrammarFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parseGrammarFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(46);
				match(WS);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			((ParseGrammarFileContext)_localctx).name = name();
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(53);
					match(WS);
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(59);
			((ParseGrammarFileContext)_localctx).miss = miss();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(60);
				match(WS);
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			((ParseGrammarFileContext)_localctx).parseTerminals = parseTerminals();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(67);
				match(WS);
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			((ParseGrammarFileContext)_localctx).parseNonTerminals = parseNonTerminals();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(74);
				match(WS);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			((ParseGrammarFileContext)_localctx).parseStart = parseStart();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(81);
				match(WS);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			((ParseGrammarFileContext)_localctx).parseRules = parseRules();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(88);
				match(WS);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((ParseGrammarFileContext)_localctx).grammar =  new Grammar(((ParseGrammarFileContext)_localctx).name.value, ((ParseGrammarFileContext)_localctx).parseStart.s, ((ParseGrammarFileContext)_localctx).parseTerminals.terms, ((ParseGrammarFileContext)_localctx).miss.regex, ((ParseGrammarFileContext)_localctx).parseNonTerminals.nonTerms, ((ParseGrammarFileContext)_localctx).parseRules.grammarRules);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public String value;
		public Token GRAMMAR_NAME;
		public TerminalNode GRAMMAR_NAME() { return getToken(GrammarFileParser.GRAMMAR_NAME, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarFileVisitor ) return ((GrammarFileVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			((NameContext)_localctx).GRAMMAR_NAME = match(GRAMMAR_NAME);
			  String name = (((NameContext)_localctx).GRAMMAR_NAME!=null?((NameContext)_localctx).GRAMMAR_NAME.getText():null);
			        name = name.substring("grammar".length(), name.length()).trim();
			        ((NameContext)_localctx).value =  name;
			     
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MissContext extends ParserRuleContext {
		public List<String> regex = new ArrayList();
		public TerminalNode MISS() { return getToken(GrammarFileParser.MISS, 0); }
		public TerminalNode COLON() { return getToken(GrammarFileParser.COLON, 0); }
		public MissListContext missList() {
			return getRuleContext(MissListContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GrammarFileParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarFileParser.WS, i);
		}
		public MissContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miss; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).enterMiss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).exitMiss(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarFileVisitor ) return ((GrammarFileVisitor<? extends T>)visitor).visitMiss(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MissContext miss() throws RecognitionException {
		MissContext _localctx = new MissContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_miss);
		int _la;
		try {
			int _alt;
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MISS:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(MISS);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(100);
					match(WS);
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(106);
				match(COLON);
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(107);
						match(WS);
						}
						} 
					}
					setState(112);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(113);
				missList(_localctx.regex);
				}
				break;
			case TERMINALS:
			case WS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MissListContext extends ParserRuleContext {
		public List<String> regex;
		public Token REGEXP;
		public TerminalNode REGEXP() { return getToken(GrammarFileParser.REGEXP, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarFileParser.SEMICOLON, 0); }
		public MissListContext missList() {
			return getRuleContext(MissListContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GrammarFileParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarFileParser.WS, i);
		}
		public MissListContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MissListContext(ParserRuleContext parent, int invokingState, List<String> regex) {
			super(parent, invokingState);
			this.regex = regex;
		}
		@Override public int getRuleIndex() { return RULE_missList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).enterMissList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).exitMissList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarFileVisitor ) return ((GrammarFileVisitor<? extends T>)visitor).visitMissList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MissListContext missList(List<String> regex) throws RecognitionException {
		MissListContext _localctx = new MissListContext(_ctx, getState(), regex);
		enterRule(_localctx, 6, RULE_missList);
		int _la;
		try {
			int _alt;
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REGEXP:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				((MissListContext)_localctx).REGEXP = match(REGEXP);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(118);
					match(WS);
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(124);
				match(SEMICOLON);
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(125);
						match(WS);
						}
						} 
					}
					setState(130);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(131);
				missList(_localctx.regex);
				regex.add((((MissListContext)_localctx).REGEXP!=null?((MissListContext)_localctx).REGEXP.getText():null));
				}
				break;
			case TERMINALS:
			case WS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseTerminalsContext extends ParserRuleContext {
		public List<Terminal> terms = new ArrayList<>();
		public TerminalNode TERMINALS() { return getToken(GrammarFileParser.TERMINALS, 0); }
		public TerminalNode COLON() { return getToken(GrammarFileParser.COLON, 0); }
		public TerminalsContext terminals() {
			return getRuleContext(TerminalsContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GrammarFileParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarFileParser.WS, i);
		}
		public ParseTerminalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseTerminals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).enterParseTerminals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).exitParseTerminals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarFileVisitor ) return ((GrammarFileVisitor<? extends T>)visitor).visitParseTerminals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseTerminalsContext parseTerminals() throws RecognitionException {
		ParseTerminalsContext _localctx = new ParseTerminalsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parseTerminals);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(TERMINALS);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(138);
				match(WS);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(COLON);
			setState(148);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(145);
					match(WS);
					}
					} 
				}
				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(151);
			terminals(_localctx.terms);
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(152);
					match(WS);
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalsContext extends ParserRuleContext {
		public List<Terminal> terms;
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarFileParser.SEMICOLON, 0); }
		public TerminalsContext terminals() {
			return getRuleContext(TerminalsContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GrammarFileParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarFileParser.WS, i);
		}
		public TerminalsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TerminalsContext(ParserRuleContext parent, int invokingState, List<Terminal> terms) {
			super(parent, invokingState);
			this.terms = terms;
		}
		@Override public int getRuleIndex() { return RULE_terminals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).enterTerminals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).exitTerminals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarFileVisitor ) return ((GrammarFileVisitor<? extends T>)visitor).visitTerminals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminalsContext terminals(List<Terminal> terms) throws RecognitionException {
		TerminalsContext _localctx = new TerminalsContext(_ctx, getState(), terms);
		enterRule(_localctx, 10, RULE_terminals);
		int _la;
		try {
			int _alt;
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				terminal(_localctx.terms);
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(159);
					match(WS);
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(165);
				match(SEMICOLON);
				setState(169);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(166);
						match(WS);
						}
						} 
					}
					setState(171);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				}
				setState(172);
				terminals(_localctx.terms);
				}
				break;
			case NON_TERMINALS:
			case WS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalContext extends ParserRuleContext {
		public List<Terminal> terms;
		public Token ID;
		public Token REGEXP;
		public TerminalNode ID() { return getToken(GrammarFileParser.ID, 0); }
		public TerminalNode EQ() { return getToken(GrammarFileParser.EQ, 0); }
		public TerminalNode REGEXP() { return getToken(GrammarFileParser.REGEXP, 0); }
		public List<TerminalNode> WS() { return getTokens(GrammarFileParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarFileParser.WS, i);
		}
		public TerminalContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TerminalContext(ParserRuleContext parent, int invokingState, List<Terminal> terms) {
			super(parent, invokingState);
			this.terms = terms;
		}
		@Override public int getRuleIndex() { return RULE_terminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).enterTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarFileListener ) ((GrammarFileListener)listener).exitTerminal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarFileVisitor ) return ((GrammarFileVisitor<? extends T>)visitor).visitTerminal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminalContext terminal(List<Terminal> terms) throws RecognitionException {
		TerminalContext _localctx = new TerminalContext(_ctx, getState(), terms);
		enterRule(_localctx, 12, RULE_terminal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			((TerminalContext)_localctx).ID = match(ID);
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(178);
				match(WS);
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(184);
			match(EQ);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(185);
				match(WS);
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(191);
			((TerminalContext)_localctx).REGEXP = match(REGEXP);
			 Terminal term = new Terminal((((TerminalContext)_localctx).ID!=null?((TerminalContext)_localctx).ID.getText():null), (((TerminalContext)_localctx).REGEXP!=null?((TerminalContext)_localctx).REGEXP.getText():null));
			          _localctx.terms.add(term);
			          terminalsByName.put((((TerminalContext)_localctx).ID!=null?((TerminalContext)_localctx).ID.getText():null), term);
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
